fix: broken ui

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,5 @@
 * {
   margin: 0;
-  background-color: #fff;
 }
 
 body {
